connection manager dialog 2.0